--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-MONGO_PASSWORD=SydneyFC123
+DB_USER=jackshields
+DB_PASSWORD=SydneyFC123
+
+MONGODB_URI=mongodb+srv://$DB_USER:$DB_PASSWORD@cluster0.lbduihv.mongodb.net/ley_data?retryWrites=true&w=majority
