--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "mongodb": "^5.7.0",
+    "mongoose": "^7.3.4",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
