--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,141 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "next/core-web-vitals",
+    "prettier"
+  ],
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"]
+    }
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": "latest",
+    "project": ["./tsconfig.json"],
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint", "eslint-plugin-import"],
+  "rules": {
+    "import/no-default-export": ["warn"],
+    "import/no-duplicates": ["warn"],
+    "import/order": [
+      "warn",
+      {
+        "alphabetize": {
+          "caseInsensitive": true,
+          "order": "asc"
+        },
+        "groups": ["builtin", "external", "internal"],
+        "newlines-between": "always",
+        "pathGroups": [
+          {
+            "group": "external",
+            "pattern": "react",
+            "position": "before"
+          },
+          {
+            "group": "external",
+            "pattern": "*"
+          },
+          {
+            "group": "internal",
+            "pattern": "components/**/*",
+            "position": "before"
+          },
+          {
+            "group": "internal",
+            "pattern": "../**/*"
+          },
+          {
+            "group": "internal",
+            "pattern": "./**/*",
+            "position": "after"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": ["react"]
+      }
+    ],
+    "jsx-a11y/anchor-is-valid": [
+      "warn",
+      {
+        "aspects": ["preferButton", "invalidHref"],
+        "components": ["Link"],
+        "specialLink": ["hrefLeft", "hrefRight"]
+      }
+    ],
+    "jsx-a11y/label-has-associated-control": [
+      "warn",
+      {
+        "assert": "either"
+      }
+    ],
+    "no-console": [
+      "warn",
+      {
+        "allow": ["warn"]
+      }
+    ],
+    "no-shadow": "off",
+    "prefer-destructuring": [
+      "warn",
+      {
+        "array": true,
+        "object": true
+      },
+      {
+        "enforceForRenamedProperties": false
+      }
+    ],
+    "react/jsx-fragments": ["warn", "syntax"],
+    "react/jsx-sort-props": [
+      1,
+      {
+        "callbacksLast": true,
+        "ignoreCase": true,
+        "reservedFirst": true,
+        "shorthandFirst": false,
+        "shorthandLast": true
+      }
+    ],
+    "@next/next/no-img-element": ["warn"],
+    "@typescript-eslint/indent": ["warn", 2],
+    "@typescript-eslint/explicit-module-boundary-types": ["warn"],
+    "@typescript-eslint/member-ordering": [
+      "warn",
+      {
+        "default": {
+          "order": "alphabetically"
+        }
+      }
+    ],
+    "@typescript-eslint/naming-convention": [
+      "warn",
+      {
+        "selector": "variable",
+        "format": ["StrictPascalCase"],
+        "prefix": ["are", "can", "did", "does", "has", "is", "should", "will"],
+        "types": ["boolean"]
+      }
+    ],
+    "@typescript-eslint/no-empty-interface": ["warn"],
+    "@typescript-eslint/no-explicit-any": ["warn"],
+    "@typescript-eslint/no-loop-func": ["warn"],
+    "@typescript-eslint/no-non-null-assertion": ["warn"],
+    "@typescript-eslint/no-shadow": ["warn"],
+    "@typescript-eslint/no-unnecessary-boolean-literal-compare": ["warn"],
+    "@typescript-eslint/no-unnecessary-condition": ["warn"],
+    "@typescript-eslint/no-unsafe-assignment": ["warn"],
+    "@typescript-eslint/no-unsafe-member-access": ["warn"],
+    "@typescript-eslint/no-unused-vars": ["warn"],
+    "@typescript-eslint/prefer-for-of": ["warn"],
+    "@typescript-eslint/prefer-includes": ["warn"],
+    "@typescript-eslint/prefer-nullish-coalescing": ["warn"],
+    "@typescript-eslint/prefer-string-starts-ends-with": ["warn"]
+  }
 }
