--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.6",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1"
   }
 }
