--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
     "next": "^13.4.12",
+    "prettier": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
@@ -26,7 +25,6 @@
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jsx-a11y": "^6.7.1"
