--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "resend": "^1.0.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
