WIP for resend and refactored some functions

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ MONGODB_URI=mongodb+srv://$DB_USER:$DB_PASSWORD@cluster0.lbduihv.mongodb.net/ley
 
 LAURENS_EMAIL=lauren-yates@live.co.uk
 LAURENS_PHONE_NUMBER=+610431471512
+
+RESEND_API_KEY=re_BsYJNXnX_3DnyEZ3SXA2jyAzJZ9wtH2Te
