--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "google-auth-library": "^8.9.0",
+    "google-spreadsheet": "^4.1.0",
     "next": "^13.4.12",
     "prettier": "^3.0.1",
     "react": "18.2.0",
