--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/react-dom": "18.2.5",
     "google-auth-library": "^8.9.0",
     "google-spreadsheet": "^4.1.0",
-    "next": "^13.4.12",
+    "googleapis": "^126.0.1",
+    "next": "^13.5.2",
     "prettier": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
