adds in testing config and tests for button and start of card components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,14 @@
       }
     ]
   },
-  "include": ["next.config.js", "next-env.d.ts", "**/*.ts", "**/*.tsx", "app/api/contact/route.ts", ".next/types/**/*.ts"],
+  "include": [
+    "next.config.js",
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "app/api/contact/route.ts",
+    ".next/types/**/*.ts",
+    "app/components/Button/Button.test.js"
+  ],
   "exclude": ["node_modules"]
 }
