--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "resend": "^1.0.0",
     "typescript": "5.1.3"
   },
