--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@vercel/analytics": "^1.1.1",
     "google-auth-library": "^8.9.0",
     "google-spreadsheet": "^4.1.0",
     "googleapis": "^126.0.1",
