--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.4.1",
-    "resend": "^1.0.0",
+    "resend": "^2.0.1-canary.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
